--- a/_includes/head/scripts.html
+++ b/_includes/head/scripts.html
@@ -16,8 +16,8 @@
     {% endunless %}
 
     custom: {
-      families: ['icomoon'],
-      urls: ['{{ icons_url | relative_url }}']
+      families: ['Nanum Gothic', 'icomoon'],
+      urls: ['https://fonts.googleapis.com/earlyaccess/nanumgothic.css', '{{ icons_url | relative_url }}']
     }
   };
   (function(d) {
