Change image align to center

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -3,6 +3,7 @@ article > p {
   margin-top: 2rem;
 }
 article img {
+  display: block;
   margin: 0 auto;
 }
 .content img, .img, .content video, .video {
